--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shrikanth IT | Senior Freelance Infrastructure Specialist</title>
+    <title>Shrikanth IT | Senior Institutional Infrastructure Specialist</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
@@ -73,7 +73,6 @@
             box-shadow: 0 20px 40px rgba(0,0,0,0.1); 
         }
         
-        /* FIXED ICON BOX & ICON VISIBILITY */
         .icon-box { 
             width: 60px; 
             height: 60px; 
@@ -108,7 +107,7 @@
             color: var(--text-body); 
             margin-bottom: 0.8rem;
         }
-        .card li i.fa-circle-check { color: var(--success); margin-right: 10px; font-size: 0.85rem; flex-shrink: 0; margin-top: 4px; }
+        .card li i { color: var(--success); margin-right: 10px; font-size: 0.85rem; flex-shrink: 0; margin-top: 4px; }
 
         .cta-section { 
             text-align: center; 
@@ -150,67 +149,69 @@
     </nav>
 
     <header>
-        <div class="freelance-badge">SENIOR FREELANCE IT SPECIALIST</div>
+        <div class="freelance-badge">7.5+ YEARS ACADEMIC IT EXPERTISE</div>
         <h1>Campus & Office IT Solutions</h1>
-        <p>Expert <strong>Freelance Support</strong> for Colleges and Schools. 7.5+ years of experience in high-end networking and security management.</p>
+        <p>Expert <strong>independent support</strong> specialized in Engineering College and School infrastructure. Leveraging 7.5+ years of institutional network administration.</p>
     </header>
 
     <div class="container">
         <div class="grid">
             
             <div class="card">
+                <div class="icon-box"><i class="fa-solid fa-graduation-cap"></i></div>
+                <h3>Academic Lab Management</h3>
+                <ul>
+                    <li><i class="fa-solid fa-circle-check"></i> Computer Lab Setup & Performance Tuning</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Student OS Deployment (Windows & Linux)</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Software Licensing & Asset Tracking (GLPI)</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Secure Web Filtering for Student Protection</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Networked Printer & Scanner Configuration</li>
+                </ul>
+            </div>
+
+            <div class="card">
                 <div class="icon-box"><i class="fa-solid fa-shield-halved"></i></div>
                 <h3>Networking & Security</h3>
+                [Image of an enterprise network topology showing a firewall, core switch, and wireless access points]
                 <ul>
-                    <li><i class="fa-solid fa-circle-check"></i> Firewall: Sophos & Fortinet Config & Troubleshooting</li>
-                    <li><i class="fa-solid fa-circle-check"></i> WiFi: Enterprise AP Config & Optimization</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Switching: L2/L3 VLAN Config & Troubleshooting</li>
-                    <li><i class="fa-solid fa-circle-check"></i> CCTV: IP Camera Config & NVR Troubleshooting</li>
-                    <li><i class="fa-solid fa-circle-check"></i> VPN: Site-to-Site & Client Tunnel Configuration</li>
-                </ul>
-            </div>
-
-            <div class="card">
-                <div class="icon-box"><i class="fa-solid fa-headset"></i></div>
-                <h3>Support & Maintenance</h3>
-                <ul>
-                    <li><i class="fa-solid fa-circle-check"></i> Remote Support: AnyDesk Troubleshooting & Helpdesk</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Endpoints: Antivirus & EDR Installation & Config</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Office 365: Outlook & Cloud Mail Troubleshooting</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Printers: Network Printer & Scanner Configuration</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Hardware: PC SSD & RAM Upgrades & Performance</li>
-                </ul>
-            </div>
-
-            <div class="card">
-                <div class="icon-box"><i class="fa-brands fa-linux"></i></div>
-                <h3>Open Source Solutions</h3>
-                <ul>
-                    <li><i class="fa-solid fa-circle-check"></i> Asset Management: GLPI & Snipe-IT Setup & Config</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Linux: Ubuntu OS Deployment for Lab Management</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Ticketing: Staff & Student Helpdesk System Setup</li>
-                    <li><i class="fa-solid fa-circle-check"></i> LibreOffice: Free Office Suite Config & Training</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Mail: Open Source Server Config & Management</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Firewall: Sophos & Fortinet Troubleshooting</li>
+                    <li><i class="fa-solid fa-circle-check"></i> WiFi: High-Density Campus AP Configuration</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Switching: L2/L3 VLAN Configuration & Logic</li>
+                    <li><i class="fa-solid fa-circle-check"></i> CCTV: Institutional IP Camera & NVR Setup</li>
+                    <li><i class="fa-solid fa-circle-check"></i> VPN: Site-to-Site & Staff Remote Connectivity</li>
                 </ul>
             </div>
 
             <div class="card">
                 <div class="icon-box"><i class="fa-solid fa-server"></i></div>
                 <h3>Server Administration</h3>
+                [Image of a centralized Windows Server Active Directory architecture]
                 <ul>
-                    <li><i class="fa-solid fa-circle-check"></i> Win/Linux: Server Role Config & Maintenance</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Active Directory: GPO & User Permission Setup</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Virtualization: VMware & Hyper-V Configuration</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Backups: Automated Data Protection & Recovery</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Storage: NAS & File Server Config & Monitoring</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Win/Linux: Server Role Config & Management</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Active Directory: Campus User GPO & Permissions</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Virtualization: VMware & Hyper-V Management</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Backups: Institutional Data Protection & Recovery</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Cloud: Office 365 & Outlook Mail Management</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <div class="icon-box"><i class="fa-solid fa-headset"></i></div>
+                <h3>Expert Support</h3>
+                <ul>
+                    <li><i class="fa-solid fa-circle-check"></i> Remote Support: AnyDesk Troubleshooting</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Endpoints: Antivirus & Security Patching</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Open Source: LibreOffice & Free Tool Migration</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Ticketing: Snipe-IT & Helpdesk System Setup</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Hardware: SSD Upgrades & Performance Audits</li>
                 </ul>
             </div>
 
         </div>
 
         <div class="cta-section">
-            <h2>Need Direct IT Assistance?</h2>
-            <p>Skip the middleman. Work directly with a 7.5-year expert for faster results.</p>
+            <h2>Trusted Institutional Support</h2>
+            <p>Work directly with a specialist who understands College & School requirements. 7.5 years of proven results.</p>
             <a href="https://wa.me/917406000477" class="whatsapp-btn">
                 <i class="fa-brands fa-whatsapp"></i> WHATSAPP CHAT NOW
             </a>
