--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         :root {
             --bg-main: #f8fafc; 
             --bg-card: #ffffff;
-            --primary: #1e40af; /* Your Royal Blue */
+            --primary: #1e40af; 
             --accent: #2563eb; 
             --dark-slate: #334155; 
             --text-head: #0f172a;
@@ -149,9 +149,9 @@
     </nav>
 
     <header>
-        <div class="freelance-badge">7.5+ YEARS ACADEMIC IT EXPERTISE</div>
+        <div class="freelance-badge">7.5+ YEARS ENGINEERING COLLEGE IT EXPERTISE</div>
         <h1>Campus & Office IT Solutions</h1>
-        <p>Expert <strong>independent support</strong> specialized in Engineering College and School infrastructure. Leveraging 7.5+ years of institutional network administration.</p>
+        <p>Expert <strong>independent support</strong> specialized in Academic Infrastructure. Leveraging 7.5+ years of institutional system and network administration.</p>
     </header>
 
     <div class="container">
@@ -164,7 +164,7 @@
                     <li><i class="fa-solid fa-circle-check"></i> Computer Lab Setup & Performance Tuning</li>
                     <li><i class="fa-solid fa-circle-check"></i> Student OS Deployment (Windows & Linux)</li>
                     <li><i class="fa-solid fa-circle-check"></i> Software Licensing & Asset Tracking (GLPI)</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Secure Web Filtering for Student Protection</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Secure Web Filtering & Student Protection</li>
                     <li><i class="fa-solid fa-circle-check"></i> Networked Printer & Scanner Configuration</li>
                 </ul>
             </div>
@@ -172,25 +172,23 @@
             <div class="card">
                 <div class="icon-box"><i class="fa-solid fa-shield-halved"></i></div>
                 <h3>Networking & Security</h3>
-                
                 <ul>
                     <li><i class="fa-solid fa-circle-check"></i> Firewall: Sophos & Fortinet Troubleshooting</li>
                     <li><i class="fa-solid fa-circle-check"></i> WiFi: High-Density Campus AP Configuration</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Switching: L2/L3 VLAN Configuration & Logic</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Switching: L2/L3 VLAN Config & Troubleshooting</li>
                     <li><i class="fa-solid fa-circle-check"></i> CCTV: Institutional IP Camera & NVR Setup</li>
-                    <li><i class="fa-solid fa-circle-check"></i> VPN: Site-to-Site & Staff Remote Connectivity</li>
+                    <li><i class="fa-solid fa-circle-check"></i> VPN: Site-to-Site & Staff Connectivity</li>
                 </ul>
             </div>
 
             <div class="card">
                 <div class="icon-box"><i class="fa-solid fa-server"></i></div>
                 <h3>Server Administration</h3>
-                
                 <ul>
-                    <li><i class="fa-solid fa-circle-check"></i> Win/Linux: Server Role Config & Management</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Active Directory: Campus User GPO & Permissions</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Win/Linux: Server Role Config & Maintenance</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Active Directory: GPO & User Permission Setup</li>
                     <li><i class="fa-solid fa-circle-check"></i> Virtualization: VMware & Hyper-V Management</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Backups: Institutional Data Protection & Recovery</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Backups: Institutional Data Protection</li>
                     <li><i class="fa-solid fa-circle-check"></i> Cloud: Office 365 & Outlook Mail Management</li>
                 </ul>
             </div>
@@ -211,7 +209,7 @@
 
         <div class="cta-section">
             <h2>Trusted Institutional Support</h2>
-            <p>Work directly with a specialist who understands College & School requirements. 7.5 years of proven results.</p>
+            <p>Work directly with a specialist who understands Engineering College requirements. 7.5 years of proven expertise.</p>
             <a href="https://wa.me/917406000477" class="whatsapp-btn">
                 <i class="fa-brands fa-whatsapp"></i> WHATSAPP CHAT NOW
             </a>
