--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             box-shadow: 0 20px 40px rgba(0,0,0,0.1); 
         }
         
+        /* HARD FIX FOR ICON VISIBILITY */
         .icon-box { 
             width: 60px; 
             height: 60px; 
@@ -85,9 +86,11 @@
             border: 1px solid #dbeafe;
         }
         .icon-box i { 
+            font-family: "Font Awesome 6 Free" !important;
+            font-weight: 900 !important;
             font-size: 1.8rem !important; 
             color: var(--primary) !important; 
-            display: inline-block !important;
+            font-style: normal !important;
         }
         
         .card h3 { 
@@ -151,7 +154,7 @@
     <header>
         <div class="freelance-badge">7.5+ YEARS ENGINEERING COLLEGE IT EXPERTISE</div>
         <h1>Campus & Office IT Solutions</h1>
-        <p>Expert <strong>independent support</strong> specialized in Academic Infrastructure. Leveraging 7.5+ years of institutional system and network administration.</p>
+        <p>Expert <strong>independent support</strong> specialized in Academic Infrastructure. 7.5+ years of experience in system and network administration for large institutions.</p>
     </header>
 
     <div class="container">
@@ -173,9 +176,9 @@
                 <div class="icon-box"><i class="fa-solid fa-shield-halved"></i></div>
                 <h3>Networking & Security</h3>
                 <ul>
-                    <li><i class="fa-solid fa-circle-check"></i> Firewall: Sophos & Fortinet Troubleshooting</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Firewall: Sophos & Fortinet Configuration</li>
                     <li><i class="fa-solid fa-circle-check"></i> WiFi: High-Density Campus AP Configuration</li>
-                    <li><i class="fa-solid fa-circle-check"></i> Switching: L2/L3 VLAN Config & Troubleshooting</li>
+                    <li><i class="fa-solid fa-circle-check"></i> Switching: L2/L3 VLAN Troubleshooting</li>
                     <li><i class="fa-solid fa-circle-check"></i> CCTV: Institutional IP Camera & NVR Setup</li>
                     <li><i class="fa-solid fa-circle-check"></i> VPN: Site-to-Site & Staff Connectivity</li>
                 </ul>
@@ -209,7 +212,7 @@
 
         <div class="cta-section">
             <h2>Trusted Institutional Support</h2>
-            <p>Work directly with a specialist who understands Engineering College requirements. 7.5 years of proven expertise.</p>
+            <p>Directly work with a specialist who understands Engineering College requirements. 7.5 years of proven results.</p>
             <a href="https://wa.me/917406000477" class="whatsapp-btn">
                 <i class="fa-brands fa-whatsapp"></i> WHATSAPP CHAT NOW
             </a>
